added style to projects page.  Added Climbr to projects

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a id="intro" class="smooth"></a>
     <h1 class="scroller-parent">
       <span class="scroller" id="scroller-1">Trevor Preston is</span>
-      <span class="scroller" id="scroller-2">a developer</span>
+      <span class="scroller" id="scroller-2">a full stack developer</span>
     </h1>
     <div class="mom">"He's a really nice boy"   -Trevor's mom</div>
     <div class="connect">
@@ -44,14 +44,22 @@
           <div class="frame">
           </div>
           <div class="bio">
-              Hi, my name is Trevor Preston, I am a freelance web developer and digital entrepeneur.  I am also occassionally a writer of bios, and that is what this is.  So you found it.  Congrats.  My site, my bio, but ga wdi assignment. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil sint sed quae, pariatur quisquam quis fuga aperiam culpa. Eum nisi exercitationem sint iusto consequuntur harum cupiditate qui molestiae magnam unde.
-           </div>
+              Hi, my name is Trevor Preston, I am a full stack web developer and digital entrepeneur.  I am also occassionally a writer of bios, and that is what this is.  So you found it.  Congrats.  My site, my bio, but ga wdi assignment. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil sint sed quae, pariatur quisquam quis fuga aperiam culpa. Eum nisi exercitationem sint iusto consequuntur harum cupiditate qui molestiae magnam unde.
+          </div>
        </div>
     </div>
-    <img src="" alt="">
+  </div>
   <div id="page4">
     <a id="portfolio" class="smooth"></a>
-      Contact page content goes here.
+    <div class="projectsBG"></div>
+    <div id="projectsBox" class="projectsBG">
+      <h2>Recent Projects</h2>
+      <div class="climbrContainer" href="https://radiant-harbor-81376.herokuapp.com/">
+        <img src="images/logo.png" alt="" id="climbrLogo">
+        <img src="images/climbr.png" alt="" id="climbrScreenshot">
+        <p>a graphical database for climbers to find routes</p>
+      </div>
+    </div>
   </div>
 </div>
 
